--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "type": "module",
   "devDependencies": {
     "vitepress": "^1.6.3"
+  },
+  "dependencies": {
+    "@catppuccin/vitepress": "^0.1.2"
   }
 }
