--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vitepress": "^1.6.3"
   },
   "dependencies": {
-    "@catppuccin/vitepress": "^0.1.2"
+    "@catppuccin/vitepress": "^0.1.2",
+    "@vercel/analytics": "^1.5.0"
   }
 }
